<resources>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">register</string>
    <string name="already_have_an_account">Already have an account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="app_name">ead_fuel_app</string>
    <string name="app_badge">SmartFuel</string>
    <string name="fuel_it_smart">SmartFuel</string>
    <string name="logo_sentence">Your Smart Filler</string>
    <string name="user_register">User Register</string>
    <string name="shed_register">Shed Register</string>
    <string name="nic_number">NIC Number</string>
    <string name="address">Address</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="welcome_user_login">User Sign In</string>
    <string name="welcome_shed_login">Shed Sign In</string>
    <string name="fuelType">Fuel Type</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="shedname">Shed Name</string>
    <string name="reg_number">Reg No</string>
    <string name="shed_address">Shed Address</string>
    <string name="dont_have_an_account">Don\'t have an account? Register Now!</string>
    <string name="reset_pw">Forgotten Password?</string>
    <string name="petrol_arrived">Petrol Arrived</string>
    <string name="petrol_finished">Petrol Finished</string>
    <string name="diesel_arrived">Diesel Arrived</string>
    <string name="diesel_finished">Diesel Finished</string>
    <string name="colombo">Colombo</string>
    <string name="You_have_selected_city">Selected City :</string>
    <string name="cities">Cities</string>
    <string name="city">City</string>
    <string name="type">Type</string>
    <string name="Selected_Fuel">Selected Fuel : </string>
    <string name="join">Join</string>
    <string name="exit">Exit</string>
    <string name="shed_name_display">Shed Name</string>
    <string name="shed_reg_no_display">Shed Reg No</string>
    <string name="shed_address_display">Shed Address</string>
    <string name="fuel_available">Fuel Available</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="finish_time">Finish Time</string>
    <string name="queue_length">Queue Length</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="you_are_in_queue">You have entered to the Queue!</string>
    <string name="exit_before_pump_fuel">Exit Before Pump Fuel</string>
    <string name="exit_after_pump_fuel">Exit After Pump Fuel</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="thank_you">Thanks for Waiting!</string>
    <string name="home">Home</string>
    <string name="smart_fuel_partner">SMART FUEL PARTNER</string>
    <string name="please_select_your_nearest_city">Please Select Your Nearest City:</string>
    <string name="please_select_fuel_type">Please Select Fuel Type:</string>
    <string name="available_sheds">Available Sheds</string>
    <string name="join_queue">Join Queue</string>
</resources>