<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".QueueDetailsActivity">

    <TextView
        android:id="@+id/shed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/shed_name_display"
        android:fontFamily="@font/poppins"
        android:padding="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shed_reg_no"
            android:layout_width="205dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/shed_reg_no_display"
            android:textColor="@color/black"
            android:padding="30dp"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/shed_address_display"
            android:layout_width="205dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/shed_address_display"
            android:textColor="@color/black"
            android:padding="30dp"
            android:textAlignment="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/shed_fuel_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/fuel_available"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/shed_fuel_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/arrival_time"
            android:padding="20dp"
            android:text="@string/arrival_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/shed_fuel_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/finish_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/shed_fuel_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/queue_length"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/queue_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/green"
            android:padding="14dp"
            android:text="@string/join_queue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>