<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/fuel_it_smart"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <ImageView
        android:id="@+id/iconShed"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/shedname"
        android:src="@drawable/shedico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_topic"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/welcome_user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue1"
        android:padding="14dp"
        android:text="@string/user_register"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconShed"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/welcome_shed_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue1"
        android:padding="14dp"
        android:text="@string/shed_register"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_user_register"
        app:layout_constraintWidth_percent=".8"
        tools:text="@string/shed_register" />

    <Button
        android:id="@+id/welcome_user_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue2"
        android:padding="14dp"
        android:text="@string/welcome_user_login"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_shed_register"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/shed_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue2"
        android:padding="14dp"
        android:text="@string/welcome_shed_login"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_user_sign_in"
        app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>