<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".QueueDetailsActivity">

    <TextView
        android:id="@+id/shed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/shed_name_display"
        android:padding="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/shed_address_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/shed_address_display"
            android:padding="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/shed_fuel_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/home"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/purple_200"
            android:padding="14dp"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>