<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="1dp"
    android:scrollbarThumbVertical="@android:color/holo_purple"
    tools:context=".UserRegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/fuel_it_smart"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_background"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="30dp"
        app:cardElevation="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColorHint="#536DFE"
                    android:paddingStart="20dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <EditText
                    android:id="@+id/nic"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_baseline_account_box_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/nic_number"
                    android:textColorHint="#536DFE"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="8dp"
                    android:paddingStart="20dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_baseline_add_home_work_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/address"
                    android:padding="8dp"
                    android:paddingStart="20dp"
                    android:textColorHint="#536DFE"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/vehicle_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_baseline_directions_car_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/vehicle_number"
                    android:padding="8dp"
                    android:paddingStart="20dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="20sp"
                    android:textColorHint="#536DFE"
                    tools:ignore="RtlSymmetry,TextContrastCheck"
                    android:importantForAutofill="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fuel_type_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/fuelType"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Petrol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/petrol"
                            android:checked="true"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/Diesel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/diesel"
                            android:textStyle="bold" />
                    </RadioGroup>
                </LinearLayout>


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_baseline_lock_open_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:textColorHint="#536DFE"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:paddingStart="20dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#536DFE"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_baseline_lock_open_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:paddingStart="20dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="80dp"
                    android:backgroundTint="@android:color/background_dark"
                    android:text="@string/register"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />

                <TextView
                    android:id="@+id/already"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>


</LinearLayout>